<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="order"
            type="com.vbogd.getandgo.domain.model.Order" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp">

            <LinearLayout
                android:id="@+id/linearTop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/orderStatusImage"
                app:layout_constraintEnd_toStartOf="@id/orderStatusImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/orderStatusImage">

                <TextView
                    android:id="@+id/orderNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{ order.number }"
                    tools:text="№56785928333456" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/orderPrice"
                        price="@{ order.price }"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:gravity="center_horizontal"
                        android:padding="4dp"
                        android:textColor="@color/white"
                        tools:text="1 160.99 P" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ImageView
                android:id="@+id/orderStatusImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_order_status"
                android:src="@drawable/ic_outline_file_open_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/orderPointImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/cd_delivery_address"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintEnd_toStartOf="@id/orderBarrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearTop" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/orderBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="orderPointImageView" />

            <TextView
                android:id="@+id/orderCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/orderBarrier"
                app:layout_constraintTop_toTopOf="@id/orderPointImageView"
                tools:text="г. Санкт-Петербург" />

            <TextView
                android:id="@+id/orderAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{ order.addressTo }"
                app:layout_constraintStart_toEndOf="@id/orderBarrier"
                app:layout_constraintTop_toBottomOf="@id/orderCity"
                tools:text="Московский пр., д.33, корп.7, кв.21" />

            <GridLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
                android:useDefaultMargins="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/orderBarrier"
                app:layout_constraintTop_toBottomOf="@id/orderAddress">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_package_weight"
                        android:src="@drawable/ic_baseline_scale_24" />

                    <TextView
                        weight="@{ order.weight }"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        tools:text="20 кг" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_package_size"
                        android:src="@drawable/ic_outline_inventory_8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        tools:text="0.5 x 0.3 x 0.2 м" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_order_delivery_date"
                        android:src="@drawable/ic_baseline_calendar_month_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{ order.deliveryDate }"
                        android:textColor="@color/black"
                        tools:text="20/02" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_order_delivery_time"
                        android:src="@drawable/ic_baseline_access_time_8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{ order.deliveryTimeFrom }"
                        android:textColor="@color/black"
                        tools:text="18:00 - 19:00" />
                </LinearLayout>

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>