<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#A1A1a1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:text="Here will be map soon." />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/orderStatusImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/cd_order_status"
                android:src="@drawable/ic_outline_file_open_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/orderStatusImage"
                app:layout_constraintStart_toEndOf="@id/orderStatusImage"
                app:layout_constraintTop_toTopOf="@id/orderStatusImage"
                tools:text="№56785928333456" />

            <TextView
                android:id="@+id/orderDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/orderNumber"
                app:layout_constraintTop_toBottomOf="@id/orderNumber"
                tools:text="Личные вещи" />

            <TextView
                android:id="@+id/orderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderDescription"
                tools:text="160.99 P" />

            <ImageView
                android:id="@+id/orderPathImageFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cd_order_address"
                android:paddingHorizontal="8dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderPrice" />

            <TextView
                android:id="@+id/orderCityFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/orderPathImageFrom"
                app:layout_constraintTop_toTopOf="@id/orderPathImageFrom"
                tools:text="г. Санкт-Петербург" />

            <TextView
                android:id="@+id/orderAddressFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/orderCityFrom"
                app:layout_constraintTop_toBottomOf="@id/orderCityFrom"
                tools:text="Московский пр., д.33, корп.7, кв.21" />

            <ImageView
                android:id="@+id/orderPathImageTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/cd_order_address"
                android:paddingHorizontal="8dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderPathImageFrom"
                app:tint="#FFBA00" />

            <TextView
                android:id="@+id/orderCityTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/orderPathImageTo"
                app:layout_constraintTop_toTopOf="@id/orderPathImageTo"
                tools:text="г. Санкт-Петербург" />

            <TextView
                android:id="@+id/orderAddressTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/orderCityTo"
                app:layout_constraintTop_toBottomOf="@id/orderPathImageTo"
                tools:text="Московский пр., д.33, корп.7, кв.21" />

            <GridLayout
                android:id="@+id/orderDetailsGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:columnCount="2"
                android:rowCount="2"
                android:useDefaultMargins="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderAddressTo">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_package_weight"
                        android:src="@drawable/ic_baseline_scale_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        tools:text="20 кг" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_package_size"
                        android:src="@drawable/ic_outline_inventory_8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        tools:text="0.5 x 0.3 x 0.2 м" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_order_delivery_date"
                        android:src="@drawable/ic_baseline_calendar_month_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        tools:text="20/02" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_order_delivery_time"
                        android:src="@drawable/ic_baseline_access_time_8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black"
                        tools:text="18:00 - 19:00" />
                </LinearLayout>

            </GridLayout>

            <ImageView
                android:id="@+id/orderCommentImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/cd_order_comment"
                android:src="@drawable/ic_baseline_comment_24"
                app:layout_constraintStart_toStartOf="@id/orderDetailsGrid"
                app:layout_constraintTop_toBottomOf="@id/orderDetailsGrid" />

            <TextView
                android:id="@+id/orderComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/orderCommentImage"
                app:layout_constraintTop_toTopOf="@id/orderCommentImage"
                tools:text="Эх побыстрее привези..." />

            <TextView
                android:id="@+id/orderReceiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderComment"
                tools:text="ООО Салют" />

            <TextView
                android:id="@+id/orderContactPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderReceiver"
                tools:text="Контакное лицо: Михаил Щевелев" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/orderChangeStatusButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="8dp"
        tools:text="Получить груз"
        android:layout_gravity="bottom"/>

</FrameLayout>